--- a/prep/docker-secret.yaml.templ
+++ b/prep/docker-secret.yaml.templ
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: Secret
 metadata:
@@ -6,5 +7,5 @@ metadata:
     tekton.dev/docker-0: https://index.docker.io
 type: kubernetes.io/basic-auth
 data:
-  username:
-  password:
+  username: # echo username | base64
+  password: # echo passwork | base64
