doc: docker secrets

--- a/prep/docker-secret.yaml.templ
+++ b/prep/docker-secret.yaml.templ
@@ -1,4 +1,7 @@
 ---
+### make a copy of this, call it secret.yaml (git ignored)
+### and fill in the credentials
+
 apiVersion: v1
 kind: Secret
 metadata:
@@ -8,4 +11,4 @@ metadata:
 type: kubernetes.io/basic-auth
 data:
   username: # echo username | base64
-  password: # echo passwork | base64
+  password: # echo password | base64
